# glsl-language-server

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: vcpkg.cmake  warnings.cmake
cmake/vcpkg-overlay-ports/lspcpp/: fix-cmake.patch  fix-optional.patch  portfile.cmake  vcpkg.json
src/: includer.cpp  includer.hpp  main.cpp  messagebuffer.cpp  messagebuffer.hpp  stdout.hpp  symbols.cpp  symbols.hpp  utils.cpp  utils.hpp  workspace.cpp  workspace.hpp
